# bnetw

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
example/: CMakeLists.txt  main.cpp
server/inc/: connection.hpp  message.hpp  server.hpp
server/src/: CMakeLists.txt  main.cpp  message.cpp  server.cpp
src/: CMakeLists.txt  connection.hpp  message.cpp  message.hpp
src/api/: api.hpp  bnetw_api.hpp  gsdk_api.hpp
src/client/inc/: client.hpp
src/client/src/: CMakeLists.txt  client.cpp  main.cpp
src/engine/: CMakeLists.txt
src/engine/networking/: CMakeLists.txt  connection.hpp
src/engine/networking/client/inc/: client.hpp
src/engine/networking/client/src/: CMakeLists.txt  client.cpp  main.cpp
src/engine/networking/messages/: message.hpp
src/engine/networking/server/inc/: server.hpp
src/engine/networking/server/src/: CMakeLists.txt  main.cpp  server.cpp
src/server/inc/: server.hpp
src/server/src/: CMakeLists.txt  main.cpp  server.cpp
test/: CMakeLists.txt  connection_test.cpp  main.cpp  server_test.cpp
